test/errors/type/str/isnum.yasl
mt.lookup('', .isnum)(1)
